--- a/meditation-test/Base.lproj/Main.storyboard
+++ b/meditation-test/Base.lproj/Main.storyboard
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,25 +17,153 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="meditation_test" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IhA-r7-LSG">
-                                <rect key="frame" x="127" y="318" width="91" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
-                                <connections>
-                                    <action selector="popUp:" destination="BYZ-38-t0r" eventType="touchUpInside" id="PdI-Z4-wrY"/>
-                                </connections>
-                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FwM-kQ-AAW">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="220.66666666666666"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Header" translatesAutoresizingMaskIntoConstraints="NO" id="hYU-FH-Z5u">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="220.66666666666666"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="hYU-FH-Z5u" firstAttribute="leading" secondItem="FwM-kQ-AAW" secondAttribute="leading" id="Cif-EW-K8u"/>
+                                    <constraint firstItem="hYU-FH-Z5u" firstAttribute="top" secondItem="FwM-kQ-AAW" secondAttribute="top" id="YXF-p7-ceA"/>
+                                    <constraint firstAttribute="trailing" secondItem="hYU-FH-Z5u" secondAttribute="trailing" id="fio-Ln-dM7"/>
+                                    <constraint firstAttribute="bottom" secondItem="hYU-FH-Z5u" secondAttribute="bottom" id="xca-oO-KP3"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2XR-9l-3x8">
+                                <rect key="frame" x="0.0" y="552" width="414" height="184"/>
+                                <subviews>
+                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="zaa-9s-wwo">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="184"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" red="0.93725490570000003" green="0.93725490570000003" blue="0.95686274770000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="jjK-TN-1Fr">
+                                            <size key="itemSize" width="395" height="187"/>
+                                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                        </collectionViewFlowLayout>
+                                        <cells>
+                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="customCell" id="4s3-aR-6Hb" customClass="belowCollectionViewCell" customModule="meditation_test" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="-1.6666666666666667" width="395" height="187"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                                    <rect key="frame" x="0.0" y="0.0" width="395" height="187"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <subviews>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="albumArt" translatesAutoresizingMaskIntoConstraints="NO" id="kSa-dg-80f">
+                                                            <rect key="frame" x="0.0" y="5" width="222" height="177"/>
+                                                        </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A8m-fo-SYJ">
+                                                            <rect key="frame" x="241" y="33" width="104" height="18"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                </view>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstItem="kSa-dg-80f" firstAttribute="top" secondItem="4s3-aR-6Hb" secondAttribute="top" constant="5" id="0zs-Z0-gPj"/>
+                                                    <constraint firstAttribute="trailing" secondItem="kSa-dg-80f" secondAttribute="trailing" constant="173" id="1d9-Ei-6fY"/>
+                                                    <constraint firstItem="A8m-fo-SYJ" firstAttribute="top" secondItem="4s3-aR-6Hb" secondAttribute="topMargin" constant="25" id="44K-Ym-Dit"/>
+                                                    <constraint firstAttribute="bottom" secondItem="kSa-dg-80f" secondAttribute="bottom" constant="5" id="EF1-9i-Yku"/>
+                                                    <constraint firstAttribute="trailingMargin" secondItem="A8m-fo-SYJ" secondAttribute="trailing" constant="42" id="FDp-zR-2tH"/>
+                                                    <constraint firstItem="kSa-dg-80f" firstAttribute="leading" secondItem="4s3-aR-6Hb" secondAttribute="leading" id="GJw-NZ-SUZ"/>
+                                                    <constraint firstAttribute="bottomMargin" secondItem="A8m-fo-SYJ" secondAttribute="bottom" constant="128" id="Kkz-N7-Z4K"/>
+                                                    <constraint firstItem="kSa-dg-80f" firstAttribute="leading" secondItem="4s3-aR-6Hb" secondAttribute="leading" id="Ngm-PY-Z72"/>
+                                                    <constraint firstAttribute="bottom" secondItem="kSa-dg-80f" secondAttribute="bottom" constant="5" id="mBW-fH-xPw"/>
+                                                    <constraint firstItem="A8m-fo-SYJ" firstAttribute="leading" secondItem="kSa-dg-80f" secondAttribute="trailing" constant="19" id="nJp-lL-Dc7"/>
+                                                    <constraint firstItem="kSa-dg-80f" firstAttribute="top" secondItem="4s3-aR-6Hb" secondAttribute="top" constant="5" id="w2l-vW-uw9"/>
+                                                </constraints>
+                                                <size key="customSize" width="395" height="187"/>
+                                                <connections>
+                                                    <outlet property="imageCustom" destination="kSa-dg-80f" id="bIS-mz-f8P"/>
+                                                    <outlet property="textCustom" destination="A8m-fo-SYJ" id="Q0P-oB-BzH"/>
+                                                </connections>
+                                            </collectionViewCell>
+                                        </cells>
+                                        <connections>
+                                            <outlet property="dataSource" destination="BYZ-38-t0r" id="vcw-iU-qRP"/>
+                                            <outlet property="delegate" destination="BYZ-38-t0r" id="5Ng-ZJ-ipI"/>
+                                        </connections>
+                                    </collectionView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pS2-cH-gsZ">
+                                <rect key="frame" x="0.0" y="220.66666666666666" width="414" height="331.33333333333337"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Today, learn about" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fi3-BJ-D09" userLabel="Today lear about">
+                                        <rect key="frame" x="119" y="26.999999999999972" width="213" height="29"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="My current Mood" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="262-Xr-bJO">
+                                        <rect key="frame" x="123" y="131.99999999999997" width="197" height="34"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OlZ-wg-fu4">
+                                        <rect key="frame" x="92" y="33.999999999999972" width="20" height="16"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                        <state key="normal" image="Learn" backgroundImage="Learn"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7WK-ov-le2">
+                                        <rect key="frame" x="91" y="142.99999999999997" width="20" height="18"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <state key="normal" backgroundImage="Learn"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RNl-uQ-zFA">
+                                        <rect key="frame" x="47" y="260" width="321" height="60"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <state key="normal" image="startMeditation"/>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="pS2-cH-gsZ" secondAttribute="trailing" id="4v8-84-3bS"/>
+                            <constraint firstItem="FwM-kQ-AAW" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="6fv-Tp-T8Y"/>
+                            <constraint firstItem="FwM-kQ-AAW" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.3" id="DBc-sb-3kH"/>
+                            <constraint firstItem="2XR-9l-3x8" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="ESW-hk-6uj"/>
+                            <constraint firstItem="pS2-cH-gsZ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Ezm-gT-jFL"/>
+                            <constraint firstItem="pS2-cH-gsZ" firstAttribute="top" secondItem="FwM-kQ-AAW" secondAttribute="bottom" id="FyP-ux-ZkD"/>
+                            <constraint firstItem="2XR-9l-3x8" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Sjx-KT-pil"/>
+                            <constraint firstItem="FwM-kQ-AAW" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="TaZ-KG-yud"/>
+                            <constraint firstItem="2XR-9l-3x8" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Yal-Am-iE7"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="2XR-9l-3x8" secondAttribute="trailing" id="eO3-aW-c9R"/>
+                            <constraint firstItem="pS2-cH-gsZ" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.45" id="idu-b6-k1A"/>
+                            <constraint firstItem="FwM-kQ-AAW" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="lKf-ME-mdZ"/>
+                            <constraint firstItem="2XR-9l-3x8" firstAttribute="top" secondItem="pS2-cH-gsZ" secondAttribute="bottom" id="uwD-0M-luU"/>
+                            <constraint firstItem="2XR-9l-3x8" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.25" id="vdi-2v-zaU"/>
+                            <constraint firstItem="2XR-9l-3x8" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="xFY-vs-NLd"/>
+                            <constraint firstItem="2XR-9l-3x8" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="zJ5-Pq-q7R"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="136.80000000000001" y="131.78410794602701"/>
+            <point key="canvasLocation" x="101.44927536231884" y="61.956521739130437"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Header" width="375" height="186"/>
+        <image name="Learn" width="20" height="16"/>
+        <image name="albumArt" width="327" height="327"/>
+        <image name="startMeditation" width="321" height="60"/>
+    </resources>
 </document>
