--- a/meditation-test/view/Base.lproj/Main.storyboard
+++ b/meditation-test/view/Base.lproj/Main.storyboard
@@ -305,7 +305,7 @@
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="CwQ-sf-Bot">
-                                <rect key="frame" x="0.0" y="143" width="375" height="407"/>
+                                <rect key="frame" x="0.0" y="141" width="375" height="407"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CELL" rowHeight="75" id="qqN-CQ-VSR">
@@ -322,11 +322,11 @@
                                     <outlet property="delegate" destination="tSg-c7-b2i" id="UQ1-MW-k7u"/>
                                 </connections>
                             </tableView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="88M-IE-JOr" userLabel="bottomView">
-                                <rect key="frame" x="0.0" y="554" width="375" height="113"/>
+                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="88M-IE-JOr" userLabel="bottomView">
+                                <rect key="frame" x="0.0" y="548" width="375" height="120"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="albumArtSmall" translatesAutoresizingMaskIntoConstraints="NO" id="yw5-Z0-gQX">
-                                        <rect key="frame" x="10" y="10" width="104" height="93"/>
+                                        <rect key="frame" x="10" y="10" width="104" height="92"/>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="FightClub" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rx3-YN-Dgx">
                                         <rect key="frame" x="124" y="15" width="74" height="21"/>
@@ -352,27 +352,28 @@
                                         <rect key="frame" x="297" y="13" width="71" height="78"/>
                                         <state key="normal" image="nextButton"/>
                                     </button>
-                                    <slider opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="seV-bL-ZtT">
-                                        <rect key="frame" x="137" y="77" width="218" height="31"/>
+                                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="seV-bL-ZtT">
+                                        <rect key="frame" x="137" y="69" width="218" height="31"/>
                                     </slider>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="wqk-Kc-udy" firstAttribute="leading" secondItem="rx3-YN-Dgx" secondAttribute="trailing" constant="46" id="1Op-vA-moi"/>
                                     <constraint firstAttribute="trailing" secondItem="wqk-Kc-udy" secondAttribute="trailing" constant="51" id="FWW-pH-2P6"/>
-                                    <constraint firstItem="seV-bL-ZtT" firstAttribute="top" secondItem="s2R-UU-xZc" secondAttribute="bottom" constant="10" id="I70-UD-EgT"/>
                                     <constraint firstItem="s2R-UU-xZc" firstAttribute="top" secondItem="rx3-YN-Dgx" secondAttribute="bottom" constant="10" id="JA5-5v-eqU"/>
                                     <constraint firstAttribute="trailing" secondItem="tlE-dK-Fzm" secondAttribute="trailing" constant="7" id="Jnl-iW-u1T"/>
                                     <constraint firstItem="tlE-dK-Fzm" firstAttribute="top" secondItem="88M-IE-JOr" secondAttribute="top" constant="13" id="Lsr-g5-Dfd"/>
+                                    <constraint firstItem="seV-bL-ZtT" firstAttribute="leading" secondItem="88M-IE-JOr" secondAttribute="leading" constant="139" id="OZh-Qr-hrW"/>
                                     <constraint firstItem="wqk-Kc-udy" firstAttribute="top" secondItem="88M-IE-JOr" secondAttribute="top" constant="10" id="PV8-LW-Wh2"/>
                                     <constraint firstItem="s2R-UU-xZc" firstAttribute="leading" secondItem="yw5-Z0-gQX" secondAttribute="trailing" constant="10" id="UDc-vM-7g2"/>
                                     <constraint firstItem="mS8-Ki-wPA" firstAttribute="leading" secondItem="s2R-UU-xZc" secondAttribute="trailing" constant="28" id="Ybz-yx-9mg"/>
+                                    <constraint firstAttribute="trailing" secondItem="seV-bL-ZtT" secondAttribute="trailing" constant="22" id="fWD-IO-OdB"/>
                                     <constraint firstItem="yw5-Z0-gQX" firstAttribute="top" secondItem="88M-IE-JOr" secondAttribute="top" constant="10" id="g5G-rH-YBH"/>
+                                    <constraint firstAttribute="bottom" secondItem="seV-bL-ZtT" secondAttribute="bottom" constant="13" id="lWg-vi-VDg"/>
                                     <constraint firstItem="mS8-Ki-wPA" firstAttribute="top" secondItem="88M-IE-JOr" secondAttribute="top" constant="14" id="m1B-kQ-yti"/>
                                     <constraint firstItem="s2R-UU-xZc" firstAttribute="top" secondItem="rx3-YN-Dgx" secondAttribute="bottom" constant="10" id="pWf-yf-9KQ"/>
                                     <constraint firstItem="rx3-YN-Dgx" firstAttribute="leading" secondItem="yw5-Z0-gQX" secondAttribute="trailing" constant="10" id="tD1-6U-9xp"/>
                                     <constraint firstItem="yw5-Z0-gQX" firstAttribute="leading" secondItem="88M-IE-JOr" secondAttribute="leading" constant="10" id="x2E-kh-4jL"/>
-                                    <constraint firstAttribute="bottom" secondItem="seV-bL-ZtT" secondAttribute="bottom" constant="6" id="xVm-y1-fAg"/>
                                     <constraint firstItem="rx3-YN-Dgx" firstAttribute="top" secondItem="88M-IE-JOr" secondAttribute="top" constant="15" id="yMz-CM-CNt"/>
                                     <constraint firstAttribute="bottom" secondItem="yw5-Z0-gQX" secondAttribute="bottom" constant="10" id="yiQ-Kp-W5e"/>
                                 </constraints>
